<resources>
    <string name="app_name">Smart Hub</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">My profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="enter_email">Enter your Email</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_hub_id">Enter Hub ID</string>
    <string name="enter_hub_access_password">Enter Hub access password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_to_continue">Sign in to continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_out_short">Log out</string>

    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>

    <string name="enter_username">Enter username</string>
    <string name="sign_in_title">Sign in to the account</string>
    <string name="register_title">Register new account</string>

    <string name="settings_general">General settings</string>
    <string name="settings_notification">Notification settings</string>

    <string name="smart_hub_name">Smart Hub 1</string>
    <string name="water_level">Water level</string>
    <string name="food_level">Food level</string>
    <string name="connect_to_hub">Connect</string>
    <string name="lock_hub">Lock hub</string>
    <string name="connecting_to_hub">Connecting…</string>
    <string name="connected_to_hub">Connected</string>
    <string name="not_connected_to_hub">Not connected</string>
    <string name="feeding">Feeding schedule</string>
    <string name="save_schedule">Save schedule</string>
    <string name="hub_camera">Hub camera</string>
    <string name="hub_settings">Hub settings</string>
    <string name="pour_feed">Pour food now</string>
    <string name="pour_water">Pour water now</string>
    <string name="schedule_dry_food">Set up pouring dry food</string>
    <string name="schedule_water">Set up pouring water</string>
    <string name="room_temperature">Air\ntemperature</string>
    <string name="room_humidity">Air\nhumidity</string>
    <string name="water_temperature">Water\ntemperature</string>
    <string name="hub_sensors_data">Smart Hub sensors data</string>
    <string name="air_quality">Air\nquality</string>
    <string name="dangerous_gases">Dangerous gases in air</string>
    <string name="dangerous_gases1">CO2\nin air</string>
    <string name="dangerous_gases2">CO or CNG\nin air</string>
    <string name="add_new_hub">Add Smart Hub</string>
    <string name="register_my_pet">Register my pet</string>
    <string name="portion_size">Portion size</string>
    <string name="max_value_exceeded">Maximum value exceeded</string>
    <string name="min_value_exceeded">Minimum value exceeded</string>
    <string name="day_1">Monday</string>
    <string name="day_2">Tuesday</string>
    <string name="day_3">Wednesday</string>
    <string name="day_4">Thursday</string>
    <string name="day_5">Friday</string>
    <string name="day_6">Saturday</string>
    <string name="day_7">Sunday</string>

    <string name="sign_in_with_google">Google account</string>

    <string name="next_string">Next</string>
    <string name="skip_string">Skip</string>
    <string name="lets_go">Let\'s go</string>
    <string name="add">Save new schedule item</string>

    <string name="error_string">Oops,\nsomething went wrong...</string>

    <string name="show_sort_title">Choose notification sort type</string>
    <string name="sort_show_default">Default sorting</string>
    <string name="sort_show_new_one_first">New ones first</string>
    <string name="sort_show_old_one_first">Old ones first</string>

    <string name="show_type_title">Choose notification type to show</string>
    <string name="show_type_all">All notifications</string>
    <string name="show_type_recommendation">Recommendations only</string>
    <string name="show_type_news">News only</string>
    <string name="show_type_hub_notification">Smart Hub notifications only</string>
    <string name="show_type_hub_error_notification">Smart Hub errors only</string>


    <!-- Greeting activity data -->
    <string name="welcome_to_app">Welcome to Smart Hub</string>
    <string name="smart_hub_reliable_friend">Smart HUB - your reliable friend</string>
    <string name="robl_personal_assistant">Robl - personal AI assistant</string>
    <string name="lets_get_started">Let\'s get started</string>

    <string name="slide1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="slide2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="slide3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="slide4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <!-- Add new Smart Hub activity instruction -->
    <!--    <string name="add_hub_step_1">Увімкніть SmartHub, натиснувши кнопку живлення на корпусі</string>-->
    <!--    <string name="add_hub_step_2">Під\ʼєднайте свій SmartHub до WiFi мережі (Налаштування -> Підключення до мережі)</string>-->
    <!--    <string name="add_hub_step_3">Згенеруйте унікальний ідентифікатор SmartHubID для підключення до пристрою (Налаштування -> Підключення до мобільного додатку)</string>-->
    <!--    <string name="add_hub_step_4">Введіть унікальний ідентифікатор SmartHubID у поле, що знаходиться нижче.</string>-->

    <string name="add_hub_step_1"><b>1.</b> Turn on the SmartHub by pressing the power button on the case</string>
    <string name="add_hub_step_2"><b>2.</b> Connect your SmartHub to a WiFi network\n<b>(Settings \➜ Network connection)</b></string>
    <string name="add_hub_step_3"><b>3.</b> Generate a unique SmartHubID to connect to the device\n<b>(Settings \➜ Mobile App Connection)</b></string>
    <string name="add_hub_step_4"><b>4.</b> Enter your unique SmartHubID in the field below.</string>
    <string name="enter_smart_hub_id_here">Enter SmartHubID…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>