<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_darker"
    tools:context=".ui.addNewHub.AddNewSmartHubActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/cat_1"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black_text"
                android:text="@string/add_hub_step_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black_text"
                android:text="@string/add_hub_step_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black_text"
                android:text="@string/add_hub_step_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black_text"
                android:text="@string/add_hub_step_4" />

            <EditText
                android:id="@+id/smartHubIdEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="12sp"
                android:background="@drawable/round_button_background_10dp"
                android:backgroundTint="@color/button_white"
                android:textColor="@color/black_text"
                android:textColorHint="@color/navigation_bar_background"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/enter_smart_hub_id_here" />

            <RelativeLayout
                android:id="@+id/smartHubIdConnectButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_button_background_10dp"
                android:foreground="@drawable/button_foreground_round_10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/smartHubIdConnectButtonProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/black_text"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/smartHubIdConnectButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_black"
                    android:gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/connect_to_hub"
                    android:visibility="visible"
                    android:textAllCaps="true"
                    android:textColor="@color/black_text"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/round_button_background_50dp"
        android:backgroundTint="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/button_foreground_round_50dp"
        android:src="@drawable/camera_move_left_24" />
</RelativeLayout>